<resources>
    <string name="app_name">Client</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_register">注册</string>
    <string name="title_activity_login">登录</string>

    <string name="action_add_menu">添加</string>

    <!-- Strings related to login -->
    <string name="prompt_email">帐号</string>
    <string name="prompt_password">密码</string>
    <string name="again_prompt_password">确认密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="title_add_menu">添加菜单</string>
    <string name="title_create_order">创建订单</string>
    <string name="title_about_me">关于我</string>
    <string name="title_change_birth">修改生日</string>
    <string name="title_change_pw">修改密码</string>
    <string name="title_get_num">取号</string>
    <string name="title_pay">付款</string>
    <string name="title_integral">我的积分</string>
    <string name="title_order_history">我的订单</string>
    <string name="title_search">搜索</string>
    <string name="title_menu_detail">菜品详情</string>
    <string name="title_evaluate">评价</string>

</resources>
